# mccentralcommand

./: .gitignore  README.md  main.py  objinit.py  pyproject.toml  requirements.txt  server.py  temp.py
templates/: base.html  index.html  monitoring.html  playerbal.html
