[tool.poetry]
name = "repl_python3_beta_mccentralcommand"
version = "0.1.0"
description = ""
authors = ["FoundingTitan <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
pickledb = "^0.9.2"
transaction = "^3.0.1"
zodb = "^5.6.0"
discord = "^1.0.1"
werkzeug = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
